[gd_scene load_steps=13 format=1]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://player.gd" type="Script" id=4]
[ext_resource path="res://assets/stage_theme.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/explode.smp" type="Sample" id=6]
[ext_resource path="res://assets/hit.smp" type="Sample" id=7]
[ext_resource path="res://assets/shoot.smp" type="Sample" id=8]
[ext_resource path="res://assets/magicforest.fnt" type="BitmapFont" id=9]

[sub_resource type="Animation" id=1]

resource/name = "bg_animation"
length = 12.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 12 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, -600 ), Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "bg_vis_animation"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2.5, 5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }

[sub_resource type="SampleLibrary" id=3]

samples/explode = { "db":-12.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/hit = { "db":-24.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/shoot = { "db":-24.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0, -600 )
texture = ExtResource( 2 )
centered = false

[node name="pos_animation" type="AnimationPlayer" parent="background"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bg_animation = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg_animation"

[node name="opacity_animation" type="AnimationPlayer" parent="background"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bg_vis_animation = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg_vis_animation"

[node name="player" type="Sprite" parent="."]

transform/pos = Vector2( 200, 520 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="stage_music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="sfx_player" type="SamplePlayer" parent="."]

config/polyphony = 50
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="text_node" type="Node2D" parent="."]

z/z = 1

[node name="score_label" type="Label" parent="text_node"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 4.0
margin/right = 142.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 9 )
text = "Valor: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over_label" type="Label" parent="text_node"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 300.0
margin/right = 400.0
margin/bottom = 324.0
custom_fonts/font = ExtResource( 9 )
text = "GAME OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


